[gd_scene load_steps=3 format=3 uid="uid://enemy_boss"]

[ext_resource type="Script" path="res://scripts/entities/enemy_boss.gd" id="1_boss"]
[ext_resource type="Texture2D" path="res://assets/sprites/enemies/enemy_boss_01.png" id="2_texture"]

[sub_resource type="CircleShape2D" id="CircleShape2D_shape"]
radius = 50.0

[node name="EnemyBoss" type="CharacterBody2D" groups=["enemies", "bosses"]]
script = ExtResource("1_boss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_shape")

[node name="GlowEffect" type="ColorRect" parent="."]
z_index = -2
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
color = Color(1, 0.8, 0, 0.3)

[node name="Shadow" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(5, 5)
modulate = Color(0, 0, 0, 0.6)
texture = ExtResource("2_texture")
scale = Vector2(0.55, 0.55)

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 6
texture = ExtResource("2_texture")
scale = Vector2(0.5, 0.5)

[node name="HPBarBG" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = 65.0
offset_right = 60.0
offset_bottom = 75.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="HPBar" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = 65.0
offset_right = 60.0
offset_bottom = 75.0
color = Color(0, 1, 0.4, 1)

[node name="WordLabel" type="RichTextLabel" parent="."]
z_index = 10
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = -65.0
bbcode_enabled = true
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/normal_font_size = 16
text = "[center]BOSS APHORISM HERE[/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="AuthorLabel" type="Label" parent="."]
z_index = 10
offset_left = -200.0
offset_top = -65.0
offset_right = 200.0
offset_bottom = -45.0
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
text = "- Author Name"

[node name="BossLabel" type="Label" parent="."]
z_index = 10
offset_left = -50.0
offset_top = -120.0
offset_right = 50.0
offset_bottom = -102.0
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
text = "BOSS"
